# mcp-sdk

./: .codeql-baseline.txt  .gitignore  AGENTS.md  CLAUDE.md  Directory.Build.props  README.md  TS-REFERENCE-GRADING-REPORT.md  Taskfile.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
csharp-mcp-client/: AuthFlow.cs  ClientHost.cs  Program.cs  csharp-mcp-client.csproj
csharp-mcp-server/: Features.cs  csharp-mcp-server.csproj
csharp-sdk/: McpJson.cs  Stackific.Mcp.csproj
csharp-sdk-tests/: Stackific.Mcp.Tests.csproj
csharp-sdk-tests/Client/: ClientBehaviorTests.cs
csharp-sdk-tests/JsonRpc/: FramingTests.cs
csharp-sdk-tests/Protocol/: AdvancedTypesTests.cs  AuthorizationRegistrationTests.cs  CapabilitiesWireTests.cs  ContentTests.cs  NegotiationTests.cs
csharp-sdk-tests/Server/: EngineTests.cs  MrtrMalformedTests.cs  RuntimeDispatchTests.cs  SubscriptionsBehaviorTests.cs  TasksLifecycleTests.cs
csharp-sdk/Client/: McpClient.cs  OAuth.cs
csharp-sdk/Json/: MetaKeys.cs
demo/: package.json
docs/: README.md  model-context-protocol.md
frontend/: package.json
py-mcp-client/: auth_flow.py  config.py  main.py  mcp_client.py  pyproject.toml
py-mcp-client/tests/: test_app.py
py-mcp-server/: auth_app.py  counter_app.py  features.py  main.py  pyproject.toml
py-sdk/: pyproject.toml
scripts/: dev.mjs  ghas-gate.sh  install-extras.mjs  xmldocmd.runtimeconfig.json
ts-mcp-client/: .env.example  package.json
ts-mcp-server/: package.json  pnpm-lock.yaml
ts-sdk/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  typedoc.json
(+6722 files in other folders)
