[project]
name = "py-mcp-client"
version = "0.1.0"
description = "Python MCP client host (FastAPI) built on stackific-mcp (py-sdk). Hosts an MCP client against py-mcp-server and serves the companion frontend's REST + SSE surface — the real Python counterpart to ts-mcp-client."
requires-python = ">=3.12"
dependencies = [
  "stackific-mcp",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
]

[tool.uv]
package = false

[tool.uv.sources]
stackific-mcp = { path = "../py-sdk", editable = true }

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
# Silence non-actionable third-party deprecations only (Python 3.14 + uvicorn[standard]/
# websockets + starlette's TestClient). These originate in dependencies, not our code.
filterwarnings = [
  "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
  "ignore:websockets.legacy is deprecated:DeprecationWarning",
  "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
  "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]
